Fixed overflowing menu dropdowns

--- a/style.css
+++ b/style.css
@@ -304,6 +304,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility; }
+  body.responsive {
+    overflow-x: hidden; }
 
 blockquote, q {
   quotes: '"' '"'; }
